--- a/src/partials/sidebar.html
+++ b/src/partials/sidebar.html
@@ -69,6 +69,7 @@
           <li>
             <a
               href="index.html"
+              @click="selected = 'Dashboard'"
               class="group relative flex items-center gap-3 px-6 py-2 font-medium text-gray-700 duration-300 ease-in-out hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-700"
             >
               <span class="icon">
