--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -67,17 +67,17 @@
       </button>
       <!-- Hamburger Toggle BTN -->
 
-      <a href="index.html" class="lg:hidden">
-        <img
-          class="dark:hidden"
-          src="/src\images\Ecorich_logo.png"
-          alt="Logo"
-        />
-        <img
-          class="hidden dark:block"
-          src="/src\images\Ecorich_logo.png"
-          alt="Logo"
-        />
+      <!-- <a href="index.html" class="lg:hidden"> -->
+      <!-- <img -->
+      <!-- class="dark:hidden" -->
+      <!-- src="/src\images\Ecorich_logo.png" -->
+      <!-- alt="Logo" -->
+      <!-- /> -->
+      <!-- <img -->
+      <!-- class="hidden dark:block" -->
+      <!-- src="/src\images\Ecorich_logo.png" -->
+      <!-- alt="Logo" -->
+      <!-- /> -->
       <!-- </a> -->
 
       <!-- Application nav menu button -->
@@ -128,7 +128,7 @@
               type="text"
               placeholder="Search or type command..."
               id="search-input"
-              class="dark:bg-dark-900 shadow-theme-xs focus:border-brand-300 focus:ring-brand-500/10 dark:focus:border-brand-800 h-11 w-full rounded-lg border border-gray-200 bg-transparent py-2.5 pr-14 pl-12 text-sm text-gray-800 placeholder:text-gray-400 focus:ring-3 focus:outline-hidden xl:w-[430px] dark:border-gray-800 dark:bg-gray-900 dark:bg-white/[0.03] dark:text-white/90 dark:placeholder:text-white/30"
+              class="dark:bg-dark-900 shadow-theme-xs focus:border-brand-300 focus:ring-brand-500/10 dark:focus:border-brand-800 h-11 w-full rounded-lg border border-gray-200 bg-transparent py-2.5 pr-14 pl-12 text-sm text-gray-800 placeholder:text-gray-400 focus:ring-3 focus:outline-hidden xl:w-[430px] dark:border-gray-800 dark:bg-gray-900 dark:text-white/90 dark:placeholder:text-white/30"
             />
 
             <button
@@ -617,10 +617,7 @@
           @click.prevent="dropdownOpen = ! dropdownOpen"
         >
           <span class="mr-3 h-11 w-11 overflow-hidden rounded-full">
-            <img
-              src="./images/user/joyce.jpg"
-              alt="User"
-            />
+            <img src="./images/user/joyce.jpg" alt="User" />
           </span>
 
           <span class="text-theme-sm mr-1 block font-medium">
