--- a/src/partials/sidebar.html
+++ b/src/partials/sidebar.html
@@ -14,19 +14,7 @@
           src="/src\images\Ecorich_logo.png"
           alt="Logo"
         />
-        <img
-          class="hidden dark:block"
-          src="/src\images\Ecorich_logo.png"
-          alt="Logo"
-        />
       </span>
-
-      <img
-        class="logo-icon"
-        :class="sidebarToggle ? 'lg:block' : 'hidden'"
-        src="/src\images\Ecorich_logo.png"
-        alt="Logo"
-      />
     </a>
   </div>
   <!-- SIDEBAR HEADER -->
@@ -134,7 +122,7 @@
           <!-- Production Tracking -->
           <li>
             <a
-              href="./index.html"
+              href="tracking.html"
               @click="selected = 'Production'"
               class="group relative flex items-center gap-3 px-6 py-2 font-medium text-gray-700 duration-300 ease-in-out hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-700"
               :class="selected === 'Production' ? 'menu-item-active' : 'menu-item-inactive'"
@@ -167,7 +155,7 @@
           <!-- Inventory -->
           <li>
             <a
-              href="./inventory.html"
+              href="inventory.html"
               @click="selected = 'Inventory'"
               class="group relative flex items-center gap-3 px-6 py-2 font-medium text-gray-700 duration-300 ease-in-out hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-700"
               :class="selected === 'Inventory' ? 'menu-item-active' : 'menu-item-inactive'"
@@ -234,18 +222,18 @@
               <span class="icon">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
-                  width="20"
-                  height="20"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  stroke="currentColor"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-microsoft-teams"
+                  viewBox="0 0 16 16"
                 >
-                  <path d="M18 21a8 8 0 0 0-16 0" />
-                  <circle cx="10" cy="8" r="5" />
-                  <path d="M22 20c0-3.37-2-6.5-4-8a5 5 0 0 0-.45-8.3" />
+                  <path
+                    d="M9.186 4.797a2.42 2.42 0 1 0-2.86-2.448h1.178c.929 0 1.682.753 1.682 1.682zm-4.295 7.738h2.613c.929 0 1.682-.753 1.682-1.682V5.58h2.783a.7.7 0 0 1 .682.716v4.294a4.197 4.197 0 0 1-4.093 4.293c-1.618-.04-3-.99-3.667-2.35Zm10.737-9.372a1.674 1.674 0 1 1-3.349 0 1.674 1.674 0 0 1 3.349 0m-2.238 9.488-.12-.002a5.2 5.2 0 0 0 .381-2.07V6.306a1.7 1.7 0 0 0-.15-.725h1.792c.39 0 .707.317.707.707v3.765a2.6 2.6 0 0 1-2.598 2.598z"
+                  />
+                  <path
+                    d="M.682 3.349h6.822c.377 0 .682.305.682.682v6.822a.68.68 0 0 1-.682.682H.682A.68.68 0 0 1 0 10.853V4.03c0-.377.305-.682.682-.682Zm5.206 2.596v-.72h-3.59v.72h1.357V9.66h.87V5.945z"
+                  />
                 </svg>
               </span>
               <span :class="sidebarToggle ? 'lg:hidden' : ''">Team</span>
@@ -322,7 +310,7 @@
           <!-- Calendar -->
           <li>
             <a
-              href="calendar.html"
+              href="socials.html"
               @click="selected = 'Calendar'"
               class="group relative flex items-center gap-3 px-6 py-2 font-medium text-gray-700 duration-300 ease-in-out hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-700"
               :class="selected === 'Calendar' ? 'menu-item-active' : 'menu-item-inactive'"
@@ -330,26 +318,18 @@
               <span class="icon">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
-                  width="20"
-                  height="20"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  stroke="currentColor"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-linkedin"
+                  viewBox="0 0 16 16"
                 >
-                  <path d="M16 14v2.2l1.6 1" />
-                  <path d="M16 2v4" />
                   <path
-                    d="M21 7.5V6a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h3.5"
+                    d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"
                   />
-                  <path d="M3 10h5" />
-                  <path d="M8 2v4" />
-                  <circle cx="16" cy="16" r="6" />
                 </svg>
               </span>
-              <span :class="sidebarToggle ? 'lg:hidden' : ''">Calendar</span>
+              <span :class="sidebarToggle ? 'lg:hidden' : ''">Socials</span>
             </a>
           </li>
 
