--- a/src/partials/sidebar.html
+++ b/src/partials/sidebar.html
@@ -10,8 +10,8 @@
     <a href="index.html">
       <span class="logo" :class="sidebarToggle ? 'hidden' : ''">
         <img
-          class="dark:hidden"
-          src="/src\images\Ecorich_logo.png"
+          class="dark:hidden h-8 w-auto"  <!-- Reduced size with h-8 w-auto -->
+          src="/src/images/Ecorich_logo.png"
           alt="Logo"
         />
       </span>
@@ -26,7 +26,7 @@
     <nav x-data="{selected: $persist('Dashboard')}">
       <!-- Menu Group -->
       <div>
-        <h3 class="mb-4 text-xs leading-[20px] text-gray-400 uppercase">
+        <h3 class="mb-4 text-xs leading-5 text-gray-400 uppercase">
           <span
             class="menu-group-title"
             :class="sidebarToggle ? 'lg:hidden' : ''"
@@ -120,7 +120,7 @@
                   <circle cx="7" cy="18" r="2" />
                 </svg>
               </span>
-              <span :class="sidebarToggle ? '' : 'lg:hidden'"
+              <span :class="sidebarToggle ? '' : 'hidden lg:inline'"
                 >Waste Suppliers</span
               >
             </a>
