resized the logo - test

--- a/src/partials/sidebar.html
+++ b/src/partials/sidebar.html
@@ -10,8 +10,8 @@
     <a href="index.html">
       <span class="logo" :class="sidebarToggle ? 'hidden' : ''">
         <img
-          class="dark:hidden h-8 w-auto"  <!-- Reduced size with h-8 w-auto -->
-          src="/src/images/Ecorich_logo.png"
+          class="dark:hidden"
+          src="/src\images\Ecorich_logo.png"
           alt="Logo"
         />
       </span>
