--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -594,7 +594,7 @@
             </ul>
 
             <a
-              href="index.html"
+              href="dashboard.html"
               class="text-theme-sm shadow-theme-xs mt-3 flex justify-center rounded-lg border border-gray-300 bg-white p-3 font-medium text-gray-700 hover:bg-gray-50 hover:text-gray-800 dark:border-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:hover:bg-white/[0.03] dark:hover:text-gray-200"
             >
               View All Notification
@@ -657,7 +657,7 @@
             <span
               class="text-theme-xs mt-0.5 block text-gray-500 dark:text-gray-400"
             >
-              ceo@ecorich.co.ke
+              Joyce@ecorich.co.ke
             </span>
           </div>
 
