--- a/src/partials/sidebar.html
+++ b/src/partials/sidebar.html
@@ -7,7 +7,7 @@
     :class="sidebarToggle ? 'justify-center' : 'justify-between'"
     class="sidebar-header flex items-center gap-2 pt-8 pb-7"
   >
-    <a href="index.html">
+    <a href="dashboard.html">
       <span class="logo" :class="sidebarToggle ? 'hidden' : ''">
         <img
           class="dark:hidden"
@@ -56,7 +56,7 @@
           <!-- Dashboard -->
           <li>
             <a
-              href="index.html"
+              href="dashboard.html"
               @click="selected = 'Dashboard'; sidebarToggle = false"
               class="group relative flex items-center gap-3 px-6 py-2 font-medium text-gray-700 duration-300 ease-in-out hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-700"
               :class="selected === 'Dashboard' ? 'menu-item-active' : 'menu-item-inactive'"
@@ -315,12 +315,12 @@
           </li>
 
           <!-- Socials -->
-          <!-- <li>
+          <li>
             <a
-              href="socials.html"
-              @click="selected = 'Calendar'"
+              href="videos.html"
+              @click="selected = 'Videos'"
               class="group relative flex items-center gap-3 px-6 py-2 font-medium text-gray-700 duration-300 ease-in-out hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-700"
-              :class="selected === 'Calendar' ? 'menu-item-active' : 'menu-item-inactive'"
+              :class="selected === 'Videos' ? 'menu-item-active' : 'menu-item-inactive'"
             >
               <span class="icon">
                 <svg
@@ -328,17 +328,16 @@
                   width="16"
                   height="16"
                   fill="currentColor"
-                  class="bi bi-linkedin"
                   viewBox="0 0 16 16"
                 >
                   <path
-                    d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"
+                    d="M0 1a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v14a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V1zm4 0v6h8V1H4zm8 8H4v6h8V9zM1 1v2h2V1H1zm2 3H1v2h2V4zM1 7v2h2V7H1zm2 3H1v2h2v-2zm-2 3v2h2v-2H1zM15 1h-2v2h2V1zm-2 3v2h2V4h-2zm2 3h-2v2h2V7zm-2 3v2h2v-2h-2zm2 3h-2v2h2v-2z"
                   />
                 </svg>
               </span>
-              <span :class="sidebarToggle ? 'lg:hidden' : ''">Socials</span>
+              <span :class="sidebarToggle ? 'lg:hidden' : ''">Videos</span>
             </a>
-          </li> -->
+          </li>
 
           <!-- User Profile -->
           <li>
@@ -405,7 +404,7 @@
           <!-- Menu Item Charts -->
           <li>
             <a
-              href="index.html"
+              href="dashboard.html"
               @click.prevent="selected = (selected === 'Charts' ? '':'Charts')"
               class="menu-item group"
               :class="(selected === 'Charts') || (page === 'lineChart' || page === 'barChart' || page === 'pieChart') ? 'menu-item-active' : 'menu-item-inactive'"
@@ -546,7 +545,7 @@
               >
                 <li>
                   <a
-                    href="signin.html"
+                    href="index.html"
                     class="menu-dropdown-item group"
                     :class="page === 'signin' ? 'menu-dropdown-item-active' : 'menu-dropdown-item-inactive'"
                   >
