--- a/src/partials/watchlist.html
+++ b/src/partials/watchlist.html
@@ -169,10 +169,10 @@
             <h3
               class="text-base font-semibold text-gray-800 dark:text-white/90"
             >
-              ABNB
+              EcoRich
             </h3>
             <span class="block text-theme-xs text-gray-500 dark:text-gray-400">
-              Airbnb, Inc
+              EcoRich Ltd
             </span>
           </div>
         </div>
@@ -182,7 +182,7 @@
             <h4
               class="mb-1 text-right text-theme-sm font-medium text-gray-700 dark:text-gray-400"
             >
-              $32,227.00
+              Kshs. 2,227.00
             </h4>
           </div>
 
@@ -226,7 +226,7 @@
               ENVT
             </h3>
             <span class="block text-theme-xs text-gray-500 dark:text-gray-400">
-              Envato, Inc
+              EcoRich, Ltd
             </span>
           </div>
         </div>
@@ -236,7 +236,7 @@
             <h4
               class="mb-1 text-right text-theme-sm font-medium text-gray-700 dark:text-gray-400"
             >
-              $13,895.00
+              Kshs. 1,895.00
             </h4>
           </div>
 
