--- a/src/partials/sidebar.html
+++ b/src/partials/sidebar.html
@@ -56,7 +56,7 @@
           <!-- Dashboard -->
           <li>
             <a
-              href="dashboard.html"
+              href="/dashboard.html"
               @click="selected = 'Dashboard'; sidebarToggle = false"
               class="group relative flex items-center gap-3 px-6 py-2 font-medium text-gray-700 duration-300 ease-in-out hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-700"
               :class="selected === 'Dashboard' ? 'menu-item-active' : 'menu-item-inactive'"
@@ -90,7 +90,7 @@
           <!-- Waste Suppliers -->
           <li>
             <a
-              href="./waste-suppliers.html"
+              href="/waste-suppliers.html"
               @click="selected = 'Suppliers'; sidebarToggle = false"
               class="group relative flex items-center gap-3 px-6 py-2 font-medium text-gray-700 duration-300 ease-in-out hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-700"
               :class="selected === 'Suppliers' ? 'menu-item-active' : 'menu-item-inactive'"
@@ -129,7 +129,7 @@
           <!-- Production Tracking -->
           <li>
             <a
-              href="tracking.html"
+              href="/tracking.html"
               @click="selected = 'Production'"
               class="group relative flex items-center gap-3 px-6 py-2 font-medium text-gray-700 duration-300 ease-in-out hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-700"
               :class="selected === 'Production' ? 'menu-item-active' : 'menu-item-inactive'"
@@ -162,7 +162,7 @@
           <!-- Inventory -->
           <li>
             <a
-              href="inventory.html"
+              href="/inventory.html"
               @click="selected = 'Inventory'"
               class="group relative flex items-center gap-3 px-6 py-2 font-medium text-gray-700 duration-300 ease-in-out hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-700"
               :class="selected === 'Inventory' ? 'menu-item-active' : 'menu-item-inactive'"
@@ -191,7 +191,7 @@
           <!-- Farmers -->
           <li>
             <a
-              href="farmers.html"
+              href="/farmers.html"
               @click="selected = 'Farmers'"
               class="group relative flex items-center gap-3 px-6 py-2 font-medium text-gray-700 duration-300 ease-in-out hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-700"
               :class="selected === 'Farmers' ? 'menu-item-active' : 'menu-item-inactive'"
@@ -221,7 +221,7 @@
           <!-- Team -->
           <li>
             <a
-              href="team.html"
+              href="/team.html"
               @click="selected = 'Team'"
               class="group relative flex items-center gap-3 px-6 py-2 font-medium text-gray-700 duration-300 ease-in-out hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-700"
               :class="selected === 'Team' ? 'menu-item-active' : 'menu-item-inactive'"
@@ -250,7 +250,7 @@
           <!-- Trainings -->
           <li>
             <a
-              href="trainings.html"
+              href="/trainings.html"
               @click="selected = 'Trainings'"
               class="group relative flex items-center gap-3 px-6 py-2 font-medium text-gray-700 duration-300 ease-in-out hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-700"
               :class="selected === 'Trainings' ? 'menu-item-active' : 'menu-item-inactive'"
@@ -284,7 +284,7 @@
           <!-- Reports -->
           <li>
             <a
-              href="reports.html"
+              href="/reports.html"
               @click="selected = 'Reports'"
               class="group relative flex items-center gap-3 px-6 py-2 font-medium text-gray-700 duration-300 ease-in-out hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-700"
               :class="selected === 'Reports' ? 'menu-item-active' : 'menu-item-inactive'"
@@ -317,7 +317,7 @@
           <!-- Socials -->
           <li>
             <a
-              href="videos.html"
+              href="/videos.html"
               @click="selected = 'Videos'"
               class="group relative flex items-center gap-3 px-6 py-2 font-medium text-gray-700 duration-300 ease-in-out hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-700"
               :class="selected === 'Videos' ? 'menu-item-active' : 'menu-item-inactive'"
@@ -342,7 +342,7 @@
           <!-- User Profile -->
           <li>
             <a
-              href="profile.html"
+              href="/profile.html"
               @click="selected = 'Profile'"
               class="group relative flex items-center gap-3 px-6 py-2 font-medium text-gray-700 duration-300 ease-in-out hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-700"
               :class="selected === 'Profile' ? 'menu-item-active' : 'menu-item-inactive'"
@@ -404,7 +404,7 @@
           <!-- Menu Item Charts -->
           <li>
             <a
-              href="dashboard.html"
+              href="/dashboard.html"
               @click.prevent="selected = (selected === 'Charts' ? '':'Charts')"
               class="menu-item group"
               :class="(selected === 'Charts') || (page === 'lineChart' || page === 'barChart' || page === 'pieChart') ? 'menu-item-active' : 'menu-item-inactive'"
@@ -462,7 +462,7 @@
               >
                 <li>
                   <a
-                    href="line-chart.html"
+                    href="/line-chart.html"
                     class="menu-dropdown-item group"
                     :class="page === 'lineChart' ? 'menu-dropdown-item-active' : 'menu-dropdown-item-inactive'"
                   >
@@ -471,7 +471,7 @@
                 </li>
                 <li>
                   <a
-                    href="bar-chart.html"
+                    href="/bar-chart.html"
                     class="menu-dropdown-item group"
                     :class="page === 'barChart' ? 'menu-dropdown-item-active' : 'menu-dropdown-item-inactive'"
                   >
@@ -545,7 +545,7 @@
               >
                 <li>
                   <a
-                    href="index.html"
+                    href="/index.html"
                     class="menu-dropdown-item group"
                     :class="page === 'signin' ? 'menu-dropdown-item-active' : 'menu-dropdown-item-inactive'"
                   >
@@ -554,7 +554,7 @@
                 </li>
                 <li>
                   <a
-                    href="signup.html"
+                    href="/signup.html"
                     class="menu-dropdown-item group"
                     :class="page === 'signup' ? 'menu-dropdown-item-active' : 'menu-dropdown-item-inactive'"
                   >
