--- a/src/partials/sidebar.html
+++ b/src/partials/sidebar.html
@@ -7,13 +7,9 @@
     :class="sidebarToggle ? 'justify-center' : 'justify-between'"
     class="sidebar-header flex items-center gap-2 pt-8 pb-7"
   >
-    <a href="dashboard.html">
+    <a href="/dashboard.html">
       <span class="logo" :class="sidebarToggle ? 'hidden' : ''">
-        <img
-          class="dark:hidden"
-          src="/src\images\Ecorich_logo.png"
-          alt="Logo"
-        />
+        <img class="dark:hidden" src="/images/Ecorich_logo.png" alt="Logo" />
       </span>
     </a>
   </div>
