--- a/src/partials/sidebar.html
+++ b/src/partials/sidebar.html
@@ -6,13 +6,7 @@
   <div
     :class="sidebarToggle ? 'justify-center' : 'justify-between'"
     class="sidebar-header flex items-center gap-2 pt-8 pb-7"
-  >
-    <a href="/dashboard.html">
-      <span class="logo" :class="sidebarToggle ? 'hidden' : ''">
-        <img class="dark:hidden" src="/images/Ecorich_logo.png" alt="Logo" />
-      </span>
-    </a>
-  </div>
+  ></div>
   <!-- SIDEBAR HEADER -->
 
   <div
