--- a/src/partials/sidebar.html
+++ b/src/partials/sidebar.html
@@ -6,7 +6,16 @@
   <div
     :class="sidebarToggle ? 'justify-center' : 'justify-between'"
     class="sidebar-header flex items-center gap-2 pt-8 pb-7"
-  ></div>
+  >
+    <a href="/dashboard.html" class="flex items-center gap-2">
+      <span
+        class="text-lg font-bold text-gray-800 dark:text-white"
+        :class="sidebarToggle ? 'hidden' : ''"
+      >
+        EcoRich Solutions
+      </span>
+    </a>
+  </div>
   <!-- SIDEBAR HEADER -->
 
   <div
